crates/sui-adapter-transactional-tests/tests/mvcc/find_all_uids.exp
processed 14 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-121:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpZO1L8D:12:23
   │
12 │     use sui::object::{Self, UID};
   │                       ^^^^ Unused 'use' of alias 'object'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpZO1L8D:13:26
   │
13 │     use sui::tx_context::TxContext;
   │                          ^^^^^^^^^ Unused 'use' of alias 'TxContext'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpZO1L8D:29:17
   │
29 │         let mut mut s = S {
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpZO1L8D:40:17
   │
40 │         let mut mut w = Wrapped {
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier



task 2 'programmable'. lines 123-125:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 127-127:
Error: task 3, lines 127-127. Unbound fake id 2,8

task 4 'programmable'. lines 129-130:
Error: INVALID TEST. Unknown object, object(2,8)

task 5 'view-object'. lines 132-132:
Error: task 5, lines 132-132. Unbound fake id 2,8

task 6 'programmable'. lines 134-135:
Error: INVALID TEST. Unknown object, object(2,8)

task 7 'view-object'. lines 137-140:
Error: task 7, lines 137-137. Unbound fake id 2,8

task 8 'programmable'. lines 142-143:
Error: INVALID TEST. Unknown object, object(2,8)

task 9 'programmable'. lines 145-146:
Error: INVALID TEST. Unknown object, object(2,8)

task 10 'programmable'. lines 148-152:
Error: INVALID TEST. Unknown object, object(2,8)

task 11 'programmable'. lines 154-155:
Error: INVALID TEST. Unknown object, object(2,8)

task 12 'programmable'. lines 157-158:
Error: INVALID TEST. Unknown object, object(2,8)

task 13 'programmable'. lines 160-161:
Error: INVALID TEST. Unknown object, object(2,8)
